gatekeeper/policies/constraints/disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: disallow-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    hostNetwork: false
