gatekeeper/policies/constraints/disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: disallow-latest
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    tags: ["latest"]
