gatekeeper/policies/constraints/require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: require-container-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    cpu: "4"
    memory: "8Gi"
