gatekeeper/policies/constraints/require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: require-non-root
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
    runAsGroup:
      rule: RunAsAny
    supplementalGroups:
      rule: RunAsAny
    fsGroup:
      rule: RunAsAny
